  to "/" after changing into the chroot(2) jail, thus retaining the current wor-
  king directory.  The new option is only permitted if the new root directory is
  the old "/", and therefore is useful with the --group and --userspec options.

  dd accepts a new status=progress level to print data transfer statistics
  on stderr approximately every second.

  split accepts a new --separator option to select a record separator character
  other than the default newline character.

  stty allows setting the "extproc" option where supported, which is
  a useful setting with high latency links.

  sync no longer ignores arguments, and syncs each specified file, or with the
  --file-system option, the file systems associated with each specified file.

  tee accepts a new --output-error option to control operation with pipes
  and output errors in general.

** Changes in behavior

  df no longer suppresses separate exports of the same remote device, as
  these are generally explicitly mounted.  The --total option does still
  suppress duplicate remote file systems.
  [suppression was introduced in coreutils-8.21]

  mv no longer supports moving a file to a hardlink, instead issuing an error.
  The implementation was susceptible to races in the presence of multiple mv
  instances, which could result in both hardlinks being deleted.  Also on case
  insensitive file systems like HFS, mv would just remove a hardlinked 'file'
  if called like `mv file File`.  The feature was added in coreutils-5.0.1.

  numfmt --from-unit and --to-unit options now interpret suffixes as SI units,
  and IEC (power of 2) units are now specified by appending 'i'.

  tee will exit early if there are no more writable outputs.

  tee does not treat the file operand '-' as meaning standard output any longer,
  for better conformance to POSIX.  This feature was added in coreutils-5.3.0.

  timeout --foreground no longer sends SIGCONT to the monitored process,