@@ -34,6 +34,7 @@ gnulib_modules="
   argv-iter
   assert
   autobuild
+  linked-list
   backupfile
   base64
   buffer-lcm
@@ -270,6 +271,7 @@ gnulib_modules="
   xgetcwd
   xgetgroups
   xgethostname
+  xlist
   xmemcoll
   xnanosleep
   xprintf
